# rpgp-py

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  justfile  prek.toml  pyproject.toml
.github/workflows/: main.yml  publish-pypi.yml  publish.yml
docs/benchmarks/: results.json
scripts/: benchmark.py
src/: api.rs  conversions.rs  info.rs  key_params.rs  keys.rs  lib.rs  messages.rs  packets.rs  serialization.rs
src/openpgp/: __init__.py  _openpgp.pyi
tests/: conftest.py  test_key_generation.py  test_openpgp.py
tests/fixtures/subkey-signed-1/: cert.asc  sig.asc
